Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
-
Bug fixes:
~~~~~~~~~~
-
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- added util.updateEffectiveDate public function to update empty effective_date
  field of published proxies without triggering the creation of a new version.
  This function should be called by workflow scripts at publishing time.