@@ -6,7 +6,8 @@ New features:
 -
 Bug fixes:
 ~~~~~~~~~~
--
+- #1139 documents inside folderish documents lose their workflow state
+when the folderish document is republished
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 - added util.updateEffectiveDate public function to update empty effective_date
